--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.3",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.3",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
